# Live_Video_Streamimg

./: CMakeLists.txt  readme.md
src/: broadcast_images.cpp  receiver.cpp
